# twitch-cli

./: .gitignore  .k  GNUmakefile  README.md  cli.py  client.py  pyproject.toml  readme.sh  requirements.txt  twitch-cli  twitch.service
backend/: .env  .gitignore  Makefile  deploy.sh  main.py  requirements.txt  run.py
browse/: .k  browse.sh  install.sh  main.lua  service.py  service.unit
browse/ftplugin/: twitch.lua
browse/nvim/: filetype.lua
browse/nvim/ftplugin/: twitch.lua
src/twitch_cli/: __init__.py  app.py  cli.py  config.py  helix.py  model.py  util.py
src/twitch_cli/oauth/: redirect.html
tests/: test_filter.py
v2/: .gitignore  .k  pyproject.toml
v2/browse/: browse.sh
v2/src/twitch_cli/: __init__.py  app.py  cli.py  config.py  filter.py  helix.py  model.py  util.py
v2/src/twitch_cli/oauth/: __init__.py
v2/vods/: client.sh  install.sh  main.lua  service.sh  service.unit
